--- a/pages/homebrew/carpc.html
+++ b/pages/homebrew/carpc.html
@@ -49,15 +49,17 @@
     </div>
 
     <div class="hero-unit">
+      <img style="float: right; margin: 30px" src="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/interface-320.jpg">
       <!-- HEADING -->
-      <img src="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/interface.jpg">
       <h2>Car PC</h2>
       <p>Tudo começou numa conversa de bar. Alguém tinha comentado que tudo fica melhor com computadores. Isso levou a uma discussão na qual, para defender o ponto de vista de um amigo, eu resolvi levar a idéia ao laboratório.</p>
       <p>No dia seguinte, eu apresentei a idéia a vários colegas de faculdade. O Régis imediatamente comprou a idéia. Eu lembro que em algum momento nós conseguimos <a href="http://www.amazon.com/Build-Your-Own-Car-PC/dp/0071468269/ref=sr_1_1?ie=UTF8&qid=1321383557&sr=8-1" target="_blank">este livro</a>, e resolvemos fazer algo do tipo.</p>
+      <p><a class="btn" href="pages/homebrew/carpc.html">Saiba mais!</a></p>
+          <!-- END HEADING -->
       <p>Mais ou menos nessa época a gente estava começando a ouvir falar em computadores de bordo, mas todo "computador de bordo" anunciado pelas montadoras era só uma forma do motorista ver no painel coisas como consumo de combustível, temperatura do motor etc. O nosso seria muito melhor, pois ia ter um sistema operacional tipo Linux ou Windows e você poderia instalar programas nele.</p>
       <p>Eu ainda tive as bolas de propor isso como um trabalho de conclusão de curso. Jamais eu faria algo do tipo "comparação entre a eficiência do algoritmo A versus algoritmo B" ou "Estudo da técnica X aplicada ao problema Y" que é tão lugar comum em cursos da nossa área.</p>
       <p>Depois de várias idéias, nós compramos umas placa-mãe pequenas, eu consegui um monitor touch-screen, meu pai montou um adaptador pra encaixar as peças onde normalmente vai o porta-CD... O detalhamento técnico todo tá na minha mono, que assim como todo o material do nosso site, é protegida pelo Creative Commons. O link segue logo abaixo.</p>
-      <p><img src="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/motherboard.jpg"></p>
+      <p><img style="float: left; margin: 30px" src="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/motherboard-320.jpg"></p>
       <p>Depois de montar um protótipo no meu quarto, eu instalei o PC no meu carro, que já era conhecido como o Nerd-móvel. Escrevi um programa pra usar um GPS e o Google Maps juntos. Botei uns 20 gigas de músicas no carro, que começavam a tocar logo após o boot. Aliás, ele bootava e desligava junto com o motor.</p>
       <p>Cheguei até a programar enquanto dirigia uma vez. Mas não recomendo a ninguém fazer isso!</p>
       <p>Como tudo que tem um começo, o projeto também teve um fim. Um belo dia, um reparo teve que ser feito no ar-condicionado do nerd-móvel, e um tanto de água entrou no PC de bordo... E o computador nunca mais ligou. Eu fiquei um tempo sem os recursos nem a vontade pra fazer outro. Até alguns dias atrás.</p>
@@ -65,7 +67,6 @@
       <p>Ah, mais uma coisa... Eu não cheguei a fazer metade do que queria nesse projeto. Botões no volante, telas para o banco de trás, controle remoto... Se alguém quiser replicar o projeto do carro, sintam-se a vontade e até convidados a melhorá-lo como puderem!</p>
       <br />
       <p><a href="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/tcc.pdf" target="_blank">Link para o download do meu TCC</a></p>
-          <!-- END HEADING -->
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
