william and styles

--- a/homebrew.html
+++ b/homebrew.html
@@ -50,18 +50,18 @@
       <div class="row">
         <div class="span-one-third">
           <!-- HEADING -->
+      <h2>Open Cellphone</h2>
+      <p>Um projeto de celular aberto utilizando o Modulo GSM ADH8066 da sparkfun e controlado por microcontroladores.</p>
+      <p><a class="btn" href="pages/homebrew/celular.html">Monte o seu!</a></p>
+      <!-- END HEADING -->
+        </div>
+        <div class="span-one-third">
+          <!-- HEADING -->
       <h2>Car PC</h2>
       <p>Tudo começou numa conversa de bar. Alguém tinha comentado que tudo fica melhor com computadores. Isso levou a uma discussão na qual, para defender o ponto de vista de um amigo, eu resolvi levar a idéia ao laboratório.</p>
       <p>No dia seguinte, eu apresentei a idéia a vários colegas de faculdade. O Régis imediatamente comprou a idéia. Eu lembro que em algum momento nós conseguimos <a href="http://www.amazon.com/Build-Your-Own-Car-PC/dp/0071468269/ref=sr_1_1?ie=UTF8&qid=1321383557&sr=8-1" target="_blank">este livro</a>, e resolvemos fazer algo do tipo.</p>
       <p><a class="btn" href="pages/homebrew/carpc.html">Saiba mais!</a></p>
           <!-- END HEADING -->
-        </div>
-        <div class="span-one-third">
-          <!-- HEADING -->
-      <h2>Open Cellphone</h2>
-      <p>Um projeto de celular aberto utilizando o Modulo GSM ADH8066 da sparfun e controlado por microcontroladores.</p>
-      <p><a class="btn" href="pages/homebrew/celular.html">Monte o seu!</a></p>
-      <!-- END HEADING -->
         </div>
         <div class="span-one-third">
           
