--- a/pages/homebrew/carpc.html
+++ b/pages/homebrew/carpc.html
@@ -67,6 +67,7 @@
       <p>Ah, mais uma coisa... Eu não cheguei a fazer metade do que queria nesse projeto. Botões no volante, telas para o banco de trás, controle remoto... Se alguém quiser replicar o projeto do carro, sintam-se a vontade e até convidados a melhorá-lo como puderem!</p>
       <br />
       <p><a href="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/tcc.pdf" target="_blank">Link para o download do meu TCC</a></p>
+<p>Renan Sousa ( @csrenan )</p>
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
