--- a/pages/homebrew/celular.html
+++ b/pages/homebrew/celular.html
@@ -49,11 +49,20 @@
     </div>
 
     <div class="hero-unit">
+	<img alt="TuxPhone" style="float:right;margin: 30px" src="/pages/homebrew/celular/Phone.jpg"></img>
       <!-- HEADING -->
       <h2>Open Cellphone</h2>
-      <p>Um projeto de celular aberto utilizando o Modulo GSM ADH8066 da sparfun e controlado por microcontroladores.</p>
+      <p>Um projeto de celular aberto utilizando o Modulo GSM ADH8066 da sparkfun e controlado por microcontroladores.</p>
       <p><a class="btn" href="pages/homebrew/celular.html">Monte o seu!</a></p>
       <!-- END HEADING -->
+      <p>Inspirado no projeto TuxPhone decidi fazer um celular , o motivo n&atilde;o poderia ser mais simples, ter liberdade total de incluir o que eu achar interessante no celular tendo controle total do hardware posso incluir os sensores que eu achar adequado podendo ter o unico celular do mercado capaz de me informar quando o ar que respiro &eacute; inflamavel ou qualquer outra maluquisse que eu considere digna ,[sarcasmo] afinal porque n&atilde;o um kinect no celular[/sarcasmo].</p>
+      <p>Com base nesse projeto pesquisei algumas wikis e levantei algumas pe&ccedil;as que seriam necessarias , nessa mesma noite liguei para o renan comentando da ideia e a receptividade foi instantanea as possibilidades abertas por essa plataforma nossa s&atilde;o infinitas , podemos fazer desde coisas por divers&atilde;o como um sistema de seguran&ccedil;a domestica carregado com bombas de fuma&ccedil;a at&eacute; coisas uteis como hardware para auxiliar pessoas deficientes </p>
+	<img src="/pages/homebrew/celular/ADH8066 GSM-GPRS Module.PNG" style="float:left;margin: 30px"></img>
+       <p>com base nisso montamos um pequeno planejamento em que na primeira fase fazemos um celular simples porem funcional com um microcontrolador bem simples e leve controlando tudo at&eacute; a fase final onde iremos montar um smartphone completo.</p>
+	<p> para inicio encomendamos uns modulos de GSM / GPRS ADH8066 e estaremos iniciando em breve o desenvolvimento utilizando ele. (foto ao lado)</p>
+<p>estamos importando a maior parte das pe&ccedil;as da sparkfun , loja americana conhecida por sua boa qualidade e a escolha desse modulo GSM / GPRS especifico foi bastante inspirada por esse &oacute;timo video do youtube <a href="http://www.youtube.com/watch?v=CQ_I-boW3uo">The well tempered hacker ep.3</a>
+<p> iremos assim que chegar as pe&ccedil;as mostrar os esquemas e o nosso projeto, suas fases e comentar ideias mirabolantes. </p>
+<p> R&eacute;gis Mesquita ( @regismesquita )</p>
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
