--- a/pages/aprenda/laser.html
+++ b/pages/aprenda/laser.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ratos de Laboratorio</title>
-    <meta name="description" content="Blog sobre como criar todo tipo de invenção usando a ciência a seu favor.">
+    <meta name="description" content="Blog sobre como criar todo tipo de inven&ccedil;&atilde;o usando a ci&ecirc;ncia a seu favor.">
     <meta name="author" content="@regismesquita e @csrenan">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -55,27 +55,27 @@
       <p>Como funcionam os lasers e como utilizar eles nos seus projetos</p>
       <p><a class="btn" href="pages/aprenda/laser.html">Aprenda sobre!</a></p>
       <!-- END HEADING -->
-<p>	Uma breve introdução sobre lasers e suas utilidades em invenções caseiras</p>
+<p>	Uma breve introdu&ccedil;&atilde;o sobre lasers e suas utilidades em inven&ccedil;&otilde;es caseiras</p>
 <p></p>
-<p>Uma das invenções dos físicos com mais aplicabilidade é o laser.  Utilizado amplamente na medicina, indústria, computação e até no supermercado (leitura do código de barras) e praticamente nenhum experimento de física hoje em dia existiria sem o laser e sua excepcional precisão. Nas pesquisas ele é utilizado até como uma pinça ótica, basicamente com o laser você é capaz até de dá um nó em uma célula. </p>
-<p>	Quais as características do laser?</p>
-<p>A luz liberada pelo laser tem uma origem similar às cores que vemos em fogos de artificio, que é o retorno de elétrons excitados ao seu estado fundamental. Com isso, temos que a luz do Laser é monocromática. Porém o grande diferencial do laser, é que ele consegue fazer com que toda essa luz seja direcionada em uma única direção e muito concentrada.  Logo a luz do laser é monocromática e direcionada, logo algo simples de se analisar e com isso, simples de se implementar em várias áreas.</p>
-<p>	Um laser contínuo tem uma potência que varia de 0.5W a 100W, já um laser pulsados consegue chegar a terawatts mas somente por um tempo muito pequeno, da ordem de microssegundos.</p>
-<p>Agora vamos a ideias do que podemos fazer com essa tecnologia física.</p>
-<p>Alias, vale lembrar que laser, é, na verdade, uma sigla para  Light Amplification by Stimulated Emission of Radiation, que já é um ótimo resumo do que é um laser. Para invenções caseiras o ideal é juntar o laser com um foto sensor, por exemplo, um LDR, que é um resistor o qual sua resistência diminui ao ser fortemente iluminado. </p>
-<p>A utilidade da união do laser com o foto sensor é que os dois juntos são capazes de transmitir informação, literalmente, na velocidade da luz. Um exemplo do que quero dizer é o controle remoto, a maior invenção da humanidade.</p>
+<p>Uma das inven&ccedil;&otilde;es dos f&iacute;sicos com mais aplicabilidade &eacute; o laser.  Utilizado amplamente na medicina, ind&uacute;stria, computa&ccedil;&atilde;o e at&eacute; no supermercado (leitura do c&oacute;digo de barras) e praticamente nenhum experimento de f&iacute;sica hoje em dia existiria sem o laser e sua excepcional precis&atilde;o. Nas pesquisas ele &eacute; utilizado at&eacute; como uma pin&ccedil;a &oacute;tica, basicamente com o laser voc&ecirc; &eacute; capaz at&eacute; de d&aacute; um n&oacute; em uma c&eacute;lula. </p>
+<p>	Quais as caracter&iacute;sticas do laser?</p>
+<p>A luz liberada pelo laser tem uma origem similar &agrave;s cores que vemos em fogos de artificio, que &eacute; o retorno de el&eacute;trons excitados ao seu estado fundamental. Com isso, temos que a luz do Laser &eacute; monocrom&aacute;tica. Por&eacute;m o grande diferencial do laser, &eacute; que ele consegue fazer com que toda essa luz seja direcionada em uma &uacute;nica dire&ccedil;&atilde;o e muito concentrada.  Logo a luz do laser &eacute; monocrom&aacute;tica e direcionada, logo algo simples de se analisar e com isso, simples de se implementar em v&aacute;rias &aacute;reas.</p>
+<p>	Um laser cont&iacute;nuo tem uma pot&ecirc;ncia que varia de 0.5W a 100W, j&aacute; um laser pulsados consegue chegar a terawatts mas somente por um tempo muito pequeno, da ordem de microssegundos.</p>
+<p>Agora vamos a ideias do que podemos fazer com essa tecnologia f&iacute;sica.</p>
+<p>Alias, vale lembrar que laser, &eacute;, na verdade, uma sigla para  Light Amplification by Stimulated Emission of Radiation, que j&aacute; &eacute; um &oacute;timo resumo do que &eacute; um laser. Para inven&ccedil;&otilde;es caseiras o ideal &eacute; juntar o laser com um foto sensor, por exemplo, um LDR, que &eacute; um resistor o qual sua resist&ecirc;ncia diminui ao ser fortemente iluminado. </p>
+<p>A utilidade da uni&atilde;o do laser com o foto sensor &eacute; que os dois juntos s&atilde;o capazes de transmitir informa&ccedil;&atilde;o, literalmente, na velocidade da luz. Um exemplo do que quero dizer &eacute; o controle remoto, a maior inven&ccedil;&atilde;o da humanidade.</p>
 	<img alt="Laser" style="float:left;margin: 30px" src="/pages/aprenda/laser/laser2.jpg"></img>
-<p>Outra ideia é o uso de laser como um sensor, basicamente basta manter um laser ligado e apontado para algum receptor, com isso haverá uma mudança no circuito quando algo passar no caminho do laser (interrompendo assim o sinal), essa é a ideia por trás daqueles sistemas de segurança a base de laser.</p>
-<p>Outra coisa interessante, é que, como a luz do laser é concentrada, ao se apontar para algum objeto, a energia incidente é suficiente para queimar algo, assim como quando se concentra a luz do sol com uma lupa, porém, a energia incidente do laser é muito maior, podendo até cortar coisas (só imaginar um sabre de luz).</p>
-<p>Segue dois ótimos vídeos, em um deles explica como criar um sistema de segurança caseiro para a sua casa, no segundo mostra como criar sua própria arma laser.</p>
-<p>	Uma possibilidade interessante é a transmissão de informação, pois afinal, até conseguirem fazer buracos de minhocas não vai ter maior velocidade de transmissão de informação que a luz, para isso seria necessário o seguinte:</p>
-<p>	2 foto sensores e 2 lasers,  cada dispositivo obviamente com um foto sensor e com um laser e cada laser apontado para o foto sensor do outro dispositivo, a informação vai ser enviada através de dois possíveis estados(laser ligado ou laser desligado), para isso cada dispositivo tem que poder oscilar o seu laser entre o estado ligado e desligado numa frequência elevada, o fator limitante dessa transferência será na realidade a capacidade de oscilar entre os estados do laser.</p>
-<p>	Um ultimo ponto é que o próprio laser perde intensidade com a distância, além das moléculas no ar que absorvem ou refletem um pouco da luz, também há o fato que apesar de ser muito direcionado o laser também diverge, basta notar que quando você aponta uma luz  laser para um objeto próximo ele tem um tamanho muito menor do que quando você o aponta para longe. Logo deve-se considerar isso.</p>
+<p>Outra ideia &eacute; o uso de laser como um sensor, basicamente basta manter um laser ligado e apontado para algum receptor, com isso haver&aacute; uma mudan&ccedil;a no circuito quando algo passar no caminho do laser (interrompendo assim o sinal), essa &eacute; a ideia por tr&aacute;s daqueles sistemas de seguran&ccedil;a a base de laser.</p>
+<p>Outra coisa interessante, &eacute; que, como a luz do laser &eacute; concentrada, ao se apontar para algum objeto, a energia incidente &eacute; suficiente para queimar algo, assim como quando se concentra a luz do sol com uma lupa, por&eacute;m, a energia incidente do laser &eacute; muito maior, podendo at&eacute; cortar coisas (s&oacute; imaginar um sabre de luz).</p>
+<p>Segue dois &oacute;timos v&iacute;deos, em um deles explica como criar um sistema de seguran&ccedil;a caseiro para a sua casa, no segundo mostra como criar sua pr&oacute;pria arma laser.</p>
+<p>	Uma possibilidade interessante &eacute; a transmiss&atilde;o de informa&ccedil;&atilde;o, pois afinal, at&eacute; conseguirem fazer buracos de minhocas n&atilde;o vai ter maior velocidade de transmiss&atilde;o de informa&ccedil;&atilde;o que a luz, para isso seria necess&aacute;rio o seguinte:</p>
+<p>	2 foto sensores e 2 lasers,  cada dispositivo obviamente com um foto sensor e com um laser e cada laser apontado para o foto sensor do outro dispositivo, a informa&ccedil;&atilde;o vai ser enviada atrav&eacute;s de dois poss&iacute;veis estados(laser ligado ou laser desligado), para isso cada dispositivo tem que poder oscilar o seu laser entre o estado ligado e desligado numa frequ&ecirc;ncia elevada, o fator limitante dessa transfer&ecirc;ncia ser&aacute; na realidade a capacidade de oscilar entre os estados do laser.</p>
+<p>	Um ultimo ponto &eacute; que o pr&oacute;prio laser perde intensidade com a dist&acirc;ncia, al&eacute;m das mol&eacute;culas no ar que absorvem ou refletem um pouco da luz, tamb&eacute;m h&aacute; o fato que apesar de ser muito direcionado o laser tamb&eacute;m diverge, basta notar que quando voc&ecirc; aponta uma luz  laser para um objeto pr&oacute;ximo ele tem um tamanho muito menor do que quando voc&ecirc; o aponta para longe. Logo deve-se considerar isso.</p>
 <p><a href="http://www.youtube.com/watch?feature=player_embedded&v=yTnqamZJ97g">Video 1</a>
  | <a href="http://www.youtube.com/watch?v=zQK1kTh57Fk&feature=player_embedded#!">Video 2</a></p>
  	  <p> William Mesquita ( @bill_mesquita )</p>
           <footer>
-          <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
+          <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licen&ccedil;a Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
 
         </div> <!-- /container -->
