--- a/about.html
+++ b/about.html
@@ -49,22 +49,22 @@
     </div>
 
     <div class="hero-unit">
-      <P STYLE="margin-bottom: 0cm">O Que &eacute; DIY e o que &eacute; HomeBrew?</P>
-      <P STYLE="margin-bottom: 0cm">
+      <P>O Que &eacute; DIY e o que &eacute; HomeBrew?</P>
+      <P>
       </P>
-      <P STYLE="margin-bottom: 0cm">DIY &eacute; uma sigla que significa “Fa&ccedil;a
+      <P>DIY &eacute; uma sigla que significa “Fa&ccedil;a
         voc&ecirc; mesmo” , &eacute; um estilo de vida que j&aacute; foi cultivado por
         muitos movimentos como o movimento Hacker e o Punk cada um seguia
         esse movimento por motivos diferentes , enquanto os punks seguiam
         para fugir da “Industria capitalista”, os Hackers faziam para
         aprender mais , para matar a curiosidade.</P>
-      <P STYLE="margin-bottom: 0cm">
+      <P>
       </P>
-      <P STYLE="margin-bottom: 0cm">Um hacker n&atilde;o &eacute; uma pessoa que invade
+      <P>Um hacker n&atilde;o &eacute; uma pessoa que invade
         sistemas ou destr&oacute;i dados mas sim uma pessoa que cria , como
-        diz o Jargon ( <A HREF="http://www.catb.org/jargon/html/H/hacker.html">http://www.catb.org/jargon/html/H/hacker.html</A>
-        ) :</SPAN></P>
-    <P STYLE="margin-bottom: 0cm">
+        diz o <A HREF="http://www.catb.org/jargon/html/H/hacker.html">Jargon</A>
+        :</SPAN></P>
+    <P>
     </P>
     <P STYLE="margin-left: 2.5cm; margin-bottom: 0cm">6.
       An expert or enthusiast of any kind. One might be an astronomy
@@ -72,9 +72,9 @@
   <P STYLE="margin-left: 2.5cm; margin-bottom: 0cm">7.
     One who enjoys the intellectual challenge of creatively overcoming or
     circumventing limitations.</SPAN></P>
-<P STYLE="margin-bottom: 0cm">
+<P>
 </P>
-<P STYLE="margin-bottom: 0cm">Em
+<P>Em
   resumo , s&atilde;o pessoas que amam o que fazem , pessoas curiosas que
   adoram desafios intelectuais  e sendo assim pessoas que n&atilde;o se
   satisfazem em simplesmente comprar um produto e utilizar ele , mas
@@ -85,16 +85,16 @@
   , remontar , fazer com as pr&oacute;prias m&atilde;o , expandir o que j&aacute; existe
   para aprender o que est&aacute; acontecendo. </SPAN>
 </P>
-<P STYLE="margin-bottom: 0cm">
+<P>
 </P>
-<P STYLE="margin-bottom: 0cm">Inspirados
+<P>Inspirados
   nos clubes de mestres cervejeiros, j&aacute; que eles consideravam que a
   cerveja de mercado era uma porcaria e portanto estudaram e come&ccedil;aram
   a fazer sua pr&oacute;pria cerveja. Eles chamavam isso de “homebrew”
   (Fermentado em Casa) e surgiu um verdadeiro movimento ao redor disso.</SPAN></P>
-  <P STYLE="margin-bottom: 0cm">
+  <P>
   </P>
-  <P STYLE="margin-bottom: 0cm">Ent&atilde;o
+  <P>Ent&atilde;o
     os hackers que viviam em uma &eacute;poca onde os computadores eram
     extremamente caros e faziam seus pr&oacute;prios computadores no melhor
     estilo DIY criaram “computer clubs” , onde misturavam o espirito
@@ -102,9 +102,9 @@
     Computer Club , local de nascimento da Apple Computer e ent&atilde;o o
     termo “Homebrew” foi adotado pelos hackers em geral como
     denomina&ccedil;&atilde;o da uni&atilde;o do movimento DIY com a cultura Hacker.</SPAN></P>
-<P STYLE="margin-bottom: 0cm">
+<P>
 </P>
-<P STYLE="margin-bottom: 0cm">Hoje
+<P>Hoje
   j&aacute; temos v&aacute;rios clubes “homebrew” ao redor do mundo , juntando
   pessoas que seguem a ideologia DIY e aplicam elas nos mais diversos
   segmentos como games , celulares e afins.</SPAN></P>
