--- a/pages/aprenda/laser.html
+++ b/pages/aprenda/laser.html
@@ -40,9 +40,9 @@
           <a class="brand" href="#">Ratos de Laborat&oacute;rio</a>
           <ul class="nav">
             <li><a href="/index.html">Entrada</a></li>
-            <li><a href="/aprenda.html">Aprenda</a></li>
+            <li class="active"><a href="/aprenda.html">Aprenda</a></li>
             <li><a href="/podcast.html">Podcast</a></li>
-            <li class="active"><a href="/homebrew.html">HomeBrew</a></li>
+            <li><a href="/homebrew.html">HomeBrew</a></li>
           </ul>
         </div>
       </div>
@@ -52,25 +52,24 @@
 	<img alt="Laser" style="float:right;margin: 30px" src="/pages/aprenda/laser/laser.jpg"></img>
       <!-- HEADING -->
       <h2>Do it With Lasers</h2>
-      <p>Como funcionam os lasers e como utilizar eles nos seus projetos</p>
+<p>	Uma breve introdu&ccedil;&atilde;o sobre lasers e suas utilidades em inven&ccedil;&otilde;es caseiras</p>
       <p><a class="btn" href="pages/aprenda/laser.html">Aprenda sobre!</a></p>
       <!-- END HEADING -->
-<p>	Uma breve introdu&ccedil;&atilde;o sobre lasers e suas utilidades em inven&ccedil;&otilde;es caseiras</p>
 <p></p>
 <p>Uma das inven&ccedil;&otilde;es dos f&iacute;sicos com mais aplicabilidade &eacute; o laser.  Utilizado amplamente na medicina, ind&uacute;stria, computa&ccedil;&atilde;o e at&eacute; no supermercado (leitura do c&oacute;digo de barras) e praticamente nenhum experimento de f&iacute;sica hoje em dia existiria sem o laser e sua excepcional precis&atilde;o. Nas pesquisas ele &eacute; utilizado at&eacute; como uma pin&ccedil;a &oacute;tica, basicamente com o laser voc&ecirc; &eacute; capaz at&eacute; de d&aacute; um n&oacute; em uma c&eacute;lula. </p>
 <p>	Quais as caracter&iacute;sticas do laser?</p>
 <p>A luz liberada pelo laser tem uma origem similar &agrave;s cores que vemos em fogos de artificio, que &eacute; o retorno de el&eacute;trons excitados ao seu estado fundamental. Com isso, temos que a luz do Laser &eacute; monocrom&aacute;tica. Por&eacute;m o grande diferencial do laser, &eacute; que ele consegue fazer com que toda essa luz seja direcionada em uma &uacute;nica dire&ccedil;&atilde;o e muito concentrada.  Logo a luz do laser &eacute; monocrom&aacute;tica e direcionada, logo algo simples de se analisar e com isso, simples de se implementar em v&aacute;rias &aacute;reas.</p>
 <p>	Um laser cont&iacute;nuo tem uma pot&ecirc;ncia que varia de 0.5W a 100W, j&aacute; um laser pulsados consegue chegar a terawatts mas somente por um tempo muito pequeno, da ordem de microssegundos.</p>
 <p>Agora vamos a ideias do que podemos fazer com essa tecnologia f&iacute;sica.</p>
-<p>Alias, vale lembrar que laser, &eacute;, na verdade, uma sigla para  Light Amplification by Stimulated Emission of Radiation, que j&aacute; &eacute; um &oacute;timo resumo do que &eacute; um laser. Para inven&ccedil;&otilde;es caseiras o ideal &eacute; juntar o laser com um foto sensor, por exemplo, um LDR, que &eacute; um resistor o qual sua resist&ecirc;ncia diminui ao ser fortemente iluminado. </p>
+<p>Alias, vale lembrar que laser, &eacute;, na verdade, uma acrônimo para  Light Amplification by Stimulated Emission of Radiation, que j&aacute; &eacute; um &oacute;timo resumo do que &eacute; um laser. Para inven&ccedil;&otilde;es caseiras o ideal &eacute; juntar o laser com um foto sensor, por exemplo, um LDR, que &eacute; um resistor o qual sua resist&ecirc;ncia diminui ao ser fortemente iluminado. </p>
 <p>A utilidade da uni&atilde;o do laser com o foto sensor &eacute; que os dois juntos s&atilde;o capazes de transmitir informa&ccedil;&atilde;o, literalmente, na velocidade da luz. Um exemplo do que quero dizer &eacute; o controle remoto, a maior inven&ccedil;&atilde;o da humanidade.</p>
 	<img alt="Laser" style="float:left;margin: 30px" src="/pages/aprenda/laser/laser2.jpg"></img>
 <p>Outra ideia &eacute; o uso de laser como um sensor, basicamente basta manter um laser ligado e apontado para algum receptor, com isso haver&aacute; uma mudan&ccedil;a no circuito quando algo passar no caminho do laser (interrompendo assim o sinal), essa &eacute; a ideia por tr&aacute;s daqueles sistemas de seguran&ccedil;a a base de laser.</p>
 <p>Outra coisa interessante, &eacute; que, como a luz do laser &eacute; concentrada, ao se apontar para algum objeto, a energia incidente &eacute; suficiente para queimar algo, assim como quando se concentra a luz do sol com uma lupa, por&eacute;m, a energia incidente do laser &eacute; muito maior, podendo at&eacute; cortar coisas (s&oacute; imaginar um sabre de luz).</p>
-<p>Segue dois &oacute;timos v&iacute;deos, em um deles explica como criar um sistema de seguran&ccedil;a caseiro para a sua casa, no segundo mostra como criar sua pr&oacute;pria arma laser.</p>
 <p>	Uma possibilidade interessante &eacute; a transmiss&atilde;o de informa&ccedil;&atilde;o, pois afinal, at&eacute; conseguirem fazer buracos de minhocas n&atilde;o vai ter maior velocidade de transmiss&atilde;o de informa&ccedil;&atilde;o que a luz, para isso seria necess&aacute;rio o seguinte:</p>
 <p>	2 foto sensores e 2 lasers,  cada dispositivo obviamente com um foto sensor e com um laser e cada laser apontado para o foto sensor do outro dispositivo, a informa&ccedil;&atilde;o vai ser enviada atrav&eacute;s de dois poss&iacute;veis estados(laser ligado ou laser desligado), para isso cada dispositivo tem que poder oscilar o seu laser entre o estado ligado e desligado numa frequ&ecirc;ncia elevada, o fator limitante dessa transfer&ecirc;ncia ser&aacute; na realidade a capacidade de oscilar entre os estados do laser.</p>
 <p>	Um ultimo ponto &eacute; que o pr&oacute;prio laser perde intensidade com a dist&acirc;ncia, al&eacute;m das mol&eacute;culas no ar que absorvem ou refletem um pouco da luz, tamb&eacute;m h&aacute; o fato que apesar de ser muito direcionado o laser tamb&eacute;m diverge, basta notar que quando voc&ecirc; aponta uma luz  laser para um objeto pr&oacute;ximo ele tem um tamanho muito menor do que quando voc&ecirc; o aponta para longe. Logo deve-se considerar isso.</p>
+<p>Segue dois &oacute;timos v&iacute;deos, em um deles explica como criar um sistema de seguran&ccedil;a caseiro para a sua casa, no segundo mostra como criar sua pr&oacute;pria arma laser.</p>
 <p><a href="http://www.youtube.com/watch?feature=player_embedded&v=yTnqamZJ97g">Video 1</a>
  | <a href="http://www.youtube.com/watch?v=zQK1kTh57Fk&feature=player_embedded#!">Video 2</a></p>
  	  <p> William Mesquita ( @bill_mesquita )</p>
