--- a/pages/podcast/episodio1.html
+++ b/pages/podcast/episodio1.html
@@ -30,9 +30,18 @@
     <link rel="apple-touch-icon" href="../../images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../../images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="../../images/apple-touch-icon-114x114.png">
+<meta property="og:image" content="http://www.ratosdelaboratorio.com.br/podcast/podcast1.jpg">
   </head>
 
   <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=257456944303342";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="topbar">
       <div class="fill">
@@ -54,6 +63,7 @@
       <h2>Podcast Ep. 1 - Inven&ccedil;&otilde;es engenhosas</h2>
       <p>Nesse Primeiro epis&oacute;dio n&oacute;s comentamos sobre diversos casos onde o inventor fez seu trabalho quase que por acidente e com um excelente resultado , divirtam-se.<p>
           <p><a class="btn" href="/pages/podcast/episodio1.html">Escute:</a>
+          <!-- END HEADING -->
             <br>
             Low Quality: 
             <audio controls="controls">
@@ -70,7 +80,7 @@
             </audio>
           </p>
          <b><small>Obs.: As musicas nesse podcast s&atilde;o de autoria do Jonathan Coulton , um dos m&uacute;sicos mais nerds que existe , musicas legalmente compradas e exibidas aqui de acordo com a licen&ccedil;a Creative Commons das mesmas.</small></b>
-          <!-- END HEADING -->
+<center><div class="fb-comments" data-num-posts="10" data-width="800" data-colorscheme="light"></div></center>
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
