--- a/pages/homebrew/carpc.html
+++ b/pages/homebrew/carpc.html
@@ -30,9 +30,18 @@
     <link rel="apple-touch-icon" href="../../images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../../images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="../../images/apple-touch-icon-114x114.png">
+<meta property="og:image" content="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/interface-320.jpg">
   </head>
 
   <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=257456944303342";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="topbar">
       <div class="fill">
@@ -68,6 +77,7 @@
       <br />
       <p><a href="http://www.ratosdelaboratorio.com.br/pages/homebrew/carpc/tcc.pdf" target="_blank">Link para o download do meu TCC</a></p>
 <p>Renan Sousa ( @csrenan )</p>
+<center><div class="fb-comments" data-num-posts="10" data-width="800" data-colorscheme="light"></div></center>
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
