--- a/pages/homebrew/celular.html
+++ b/pages/homebrew/celular.html
@@ -25,14 +25,22 @@
       }
     </style>
 
-    <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="../../images/favicon.ico">
     <link rel="apple-touch-icon" href="../../images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../../images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="../../images/apple-touch-icon-114x114.png">
+<meta property="og:image" content="http://www.ratosdelaboratorio.com.br/pages/homebrew/celular/Phone.jpg">
   </head>
 
   <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=257456944303342";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="topbar">
       <div class="fill">
@@ -63,6 +71,7 @@
 <p>estamos importando a maior parte das pe&ccedil;as da sparkfun , loja americana conhecida por sua boa qualidade e a escolha desse modulo GSM / GPRS especifico foi bastante inspirada por esse &oacute;timo video do youtube <a href="http://www.youtube.com/watch?v=CQ_I-boW3uo">The well tempered hacker ep.3</a>
 <p> iremos assim que chegar as pe&ccedil;as mostrar os esquemas e o nosso projeto, suas fases e comentar ideias mirabolantes. </p>
 <p> R&eacute;gis Mesquita ( @regismesquita )</p>
+<center><div class="fb-comments" data-num-posts="10" data-width="800" data-colorscheme="light"></div></center>
           <footer>
           <p><div id='licenca'><a rel="license" href="#licenca"><img alt="Licença Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /> Click aqui para mais detalhes</a></div></p>
           </footer>
